--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,15 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.activemq/artemis-core-client -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-core-client</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
